fixed layout bugs

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -334,10 +334,9 @@ h1 {
     width: 100%;
     height: 75%;
 
-
     @include breakpoints.desktop() {
-      height: 100%;
       flex-direction: column;
+      justify-content: flex-start;
   }
 
     #pokemonForm {
@@ -402,8 +401,9 @@ h1 {
     #searchResults {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(1, 75px);
+      grid-auto-rows: 75px ;
       width: 100%;
+      height: 100%;
       overflow-x: hidden;
       overflow-y: auto;
       background-color: whitesmoke;
@@ -411,11 +411,11 @@ h1 {
       padding: 1.2em;
       gap: 1.5em;
       scroll-behavior: smooth;
-      flex: 1 1 auto;
+
 
       @include breakpoints.desktop() {
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(1, 1fr);
+        grid-auto-rows: 120px;
         padding: 1em;
       }
     
